# CVparser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  nlp_parser.py
src/nlp_mode/: __init__.py  awards.py  education.py  experience.py  languages.py  personal_details.py  references.py  segment.py  trainings.py
